<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/purple_200"
    android:tag="@string/menu_fragment_label"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_marginHorizontal="30dp"
    tools:context=".Fragments.MenuFragment">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textButton"
        android:text="A Faire"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        />
    <Button
        android:layout_below="@id/textButton"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag1button"
        android:text="@string/first_fragment_label"/>
    <Button
        android:layout_below="@id/frag1button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag2button"
        android:layout_marginTop="30dp"
        android:text="@string/second_fragment_label"/>
    <Button
        android:layout_below="@id/frag2button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/frag3button"
        android:text="@string/third_fragment_label"/>
    <Button
        android:layout_below="@id/frag3button"
        android:id="@+id/frag4Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fourth_fragment_label"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag4Button"
        android:id="@+id/frag5button"
        android:layout_marginTop="30dp"
        android:text="@string/fifth_fragment_label"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag5button"
        android:id="@+id/frag6button"
        android:layout_marginTop="30dp"
        android:text="@string/sixth_fragment_label"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag5button"
        android:paddingTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/teal_200">

            <TextView
                android:id="@+id/scrollTextview"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/large_text"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>